Change manifest for single template

--- a/gear/push_template/src/docker/manifest.json
+++ b/gear/push_template/src/docker/manifest.json
@@ -38,6 +38,15 @@
             "type": "string",
             "default": "nacc"
         },
+        "template_project": {
+            "description": "Label of the template project",
+            "type": "string"
+        },
+        "template_group": {
+            "description": "ID of the template group",
+            "type": "string",
+            "default": "project-templates"
+        },
         "new_only": {
             "description": "Only create projects for centers tagged as new",
             "type": "boolean",
