--- a/gear/redcap_fw_transfer/src/docker/manifest.json
+++ b/gear/redcap_fw_transfer/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "redcap-fw-transfer",
     "label": "REDCap to Flywheel Transfer",
     "description": "Gear to transfer from data from a REDCap project to the respective Flywheel project",
-    "version": "0.0.4",
+    "version": "0.0.10",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/redcap-fw-transfer:0.0.4"
+            "image": "naccdata/redcap-fw-transfer:0.0.10"
         },
         "flywheel": {
             "suite": "Import",
@@ -28,21 +28,15 @@
         }
     },
     "config": {
-        "dry_run": {
-            "description": "Whether to do a dry run",
-            "type": "boolean",
-            "default": false
-        },
-        "parameter_path": {
-            "description": "Parameter path for REDCap project credentials",
-            "type": "string",
-            "default": "/prod/flywheel/redcap/"
-        },
         "apikey_path_prefix": {
             "description": "The instance specific AWS parameter gearbot path prefix",
             "type": "string",
             "default": "/prod/flywheel/gearbot"
-
+        },
+        "parameter_path": {
+            "description": "AWS parameter path for REDCap project credentials",
+            "type": "string",
+            "default": "/redcap/aws"
         }
     },
     "command": "/bin/run"
