--- a/gear/project_management/src/docker/manifest.json
+++ b/gear/project_management/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "project-management",
     "label": "Project management",
     "description": "Creates and updates projects from project YAML file",
-    "version": "0.0.17",
+    "version": "0.0.26",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/project-management:0.0.17"
+            "image": "naccdata/project-management:0.0.26"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -51,6 +51,11 @@
             "description": "Only create projects for centers tagged as new",
             "type": "boolean",
             "default": false
+        },
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter gearbot path prefix",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
         }
     },
     "command": "/bin/run"
