--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pydantic>=2.5.2
 pyyaml==6.0
 pytest>=7.2.0
 requests>=2.18.4
+requests-oauthlib>=2.0.0
 setuptools>=68.2.2
 sqlalchemy>=2.0.23
 ssm-parameter-store>=19.11.0
