--- a/gear/redcap_fw_transfer/src/docker/manifest.json
+++ b/gear/redcap_fw_transfer/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "redcap-fw-transfer",
     "label": "REDCap to Flywheel Transfer",
     "description": "Gear to transfer from data from a REDCap project to the respective Flywheel project",
-    "version": "0.0.12",
+    "version": "0.0.15",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/redcap-fw-transfer:0.0.12"
+            "image": "naccdata/redcap-fw-transfer:0.0.15"
         },
         "flywheel": {
             "suite": "Import",
@@ -34,7 +34,7 @@
             "default": "/prod/flywheel/gearbot"
         },
         "parameter_path": {
-            "description": "AWS parameter path for REDCap project credentials",
+            "description": "AWS parameter base path for REDCap instance",
             "type": "string",
             "default": "/redcap/aws"
         }
