--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pyyaml==6.0
 pytest>=7.2.0
 requests>=2.18.4
 requests-oauthlib>=2.0.0
+types-requests
 setuptools>=68.2.2
 sqlalchemy>=2.0.23
 ssm-parameter-store>=19.11.0
