--- a/gear/identifier_provisioning/src/docker/manifest.json
+++ b/gear/identifier_provisioning/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "identifier-provisioning",
     "label": "Identifier Provisioning",
     "description": "Gear for provisioning NACCIDs from PTENRL forms",
-    "version": "0.0.1",
+    "version": "0.0.4",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/identifier-provisioning:0.0.1"
+            "image": "naccdata/identifier-provisioning:0.0.4"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -37,15 +37,20 @@
         }
     },
     "config": {
+        "identifier_mode": {
+            "description": "Whether to create identifiers in dev or prod database",
+            "type": "string",
+            "default": "dev"
+        },
+        "form_name": {
+            "description": "The module name of the form",
+            "type": "string",
+            "default": "ptenrlv1"
+        },
         "dry_run": {
             "description": "Whether to do a dry run",
             "type": "boolean",
             "default": false
-        },
-        "rds_parameter_path": {
-            "description": "SSM parameter path for identifiers RDS credentials",
-            "type": "string",
-            "default": "/prod/flywheel/gearbot/identifiers"
         },
         "apikey_path_prefix": {
             "description": "The instance specific AWS parameter path prefix for apikey",
