--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 boto3>=1.28.53
 boto3-stubs[boto3]
+botocore
 flywheel-gear-toolkit>=0.2
 flywheel-sdk>=17.7.0
 fw-client>=0.7.0
@@ -12,6 +13,7 @@ pydantic>=2.5.2
 pyyaml==6.0
 pytest>=7.2.0
 requests>=2.18.4
+requests-oauthlib>=2.0.0
 setuptools>=68.2.2
 sqlalchemy>=2.0.23
 ssm-parameter-store>=19.11.0
