--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,8 +28,8 @@
             "extensions": [
                 "ms-python.python",
                 "ms-azuretools.vscode-docker",
-                "yzhang.markdown-all-in-one",
-                "mermaidchart.vscode-mermaid-chart"
+                "yzhang.markdown-all-in-one"
+                // "mermaidchart.vscode-mermaid-chart"
             ]
         }
     }
