--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,6 +29,7 @@
                 "ms-python.python",
                 "ms-azuretools.vscode-docker",
                 "yzhang.markdown-all-in-one"
+                // "mermaidchart.vscode-mermaid-chart"
             ]
         }
     }
