--- a/gear/form_qc_checker/src/docker/BUILD
+++ b/gear/form_qc_checker/src/docker/BUILD
@@ -1,8 +1,8 @@
 file(name="manifest", source="manifest.json")
 
-docker_image(name="form-qc-checker",
-             source="Dockerfile",
-             dependencies=[
-                 ":manifest", "gear/form_qc_checker/src/python/form_qc_app:bin"
-             ],
-             image_tags=["0.0.28", "latest"])
+docker_image(
+    name="form-qc-checker",
+    source="Dockerfile",
+    dependencies=[":manifest", "gear/form_qc_checker/src/python/form_qc_app:bin"],
+    image_tags=["0.0.28", "latest"],
+)
