--- a/gear/identifier_lookup/src/python/identifier_app/BUILD
+++ b/gear/identifier_lookup/src/python/identifier_app/BUILD
@@ -1,3 +1,5 @@
-python_sources(name="identifier_app", )
+python_sources(
+    name="identifier_app",
+)
 
 pex_binary(name="bin", entry_point="run.py")
