--- a/gear/redcap_fw_transfer/src/docker/BUILD
+++ b/gear/redcap_fw_transfer/src/docker/BUILD
@@ -5,6 +5,7 @@ docker_image(
     source="Dockerfile",
     dependencies=[
         ":manifest",
-        "gear/redcap_fw_transfer/src/python/redcap_fw_transfer_app:bin"
+        "gear/redcap_fw_transfer/src/python/redcap_fw_transfer_app:bin",
     ],
-    image_tags=["0.0.15", "latest"])
+    image_tags=["0.0.15", "latest"],
+)
