Format build files with yapf

--- a/gear/redcap_project_creation/src/python/redcap_project_creation_app/BUILD
+++ b/gear/redcap_project_creation/src/python/redcap_project_creation_app/BUILD
@@ -1,5 +1,3 @@
-python_sources(
-    name="redcap_project_creation_app",
-)
+python_sources(name="redcap_project_creation_app", )
 
 pex_binary(name="bin", entry_point="run.py")
