--- a/gear/identifier_provisioning/src/python/identifier_provisioning_app/BUILD
+++ b/gear/identifier_provisioning/src/python/identifier_provisioning_app/BUILD
@@ -1,5 +1,3 @@
-python_sources(
-    name="identifier_provisioning_app",
-)
+python_sources(name="identifier_provisioning_app", )
 
 pex_binary(name="bin", entry_point="run.py")
