--- a/gear/push_template/src/docker/BUILD
+++ b/gear/push_template/src/docker/BUILD
@@ -3,6 +3,8 @@ file(name="manifest", source="manifest.json")
 docker_image(
     name="push-template",
     source="Dockerfile",
-    dependencies=[":manifest", "gear/push_template/src/python/template_app:bin"],
+    dependencies=[
+        ":manifest", "gear/push_template/src/python/template_app:bin"
+    ],
     image_tags=["0.0.16", "latest"],
 )
