--- a/gear/redcap_fw_transfer/src/python/redcap_fw_transfer_app/BUILD
+++ b/gear/redcap_fw_transfer/src/python/redcap_fw_transfer_app/BUILD
@@ -1,5 +1,3 @@
-python_sources(
-    name="redcap_fw_transfer_app",
-)
+python_sources(name="redcap_fw_transfer_app", )
 
 pex_binary(name="bin", entry_point="run.py")
