--- a/gear/redcap_project_info_management/src/python/redcap_info_app/BUILD
+++ b/gear/redcap_project_info_management/src/python/redcap_info_app/BUILD
@@ -1,5 +1,3 @@
-python_sources(
-    name="redcap_info_app",
-)
+python_sources(name="redcap_info_app", )
 
 pex_binary(name="bin", entry_point="run.py")
