--- a/mypy-stubs/src/python/flywheel/models/BUILD
+++ b/mypy-stubs/src/python/flywheel/models/BUILD
@@ -1,4 +1,4 @@
-python_sources(name="lib", skip_flake8=True, skip_pylint=True, skip_isort=True)
+python_sources(name="lib", skip_ruff=True)
 
 resource(
     name="py_typed",
