Format coreapi BUILD file

--- a/comanage/coreapi/src/python/BUILD
+++ b/comanage/coreapi/src/python/BUILD
@@ -1,1 +1,3 @@
-python_sources(name="coreapi", sources=["**/*.py"], dependencies=["comanage:coreapi_client"])
+python_sources(name="coreapi",
+               sources=["**/*.py"],
+               dependencies=["comanage:coreapi_client"])
