Disable linter on coreapi

--- a/comanage/coreapi/src/python/BUILD
+++ b/comanage/coreapi/src/python/BUILD
@@ -1,3 +1,4 @@
 python_sources(name="coreapi",
                sources=["**/*.py"],
-               dependencies=["comanage:coreapi_client"])
+               dependencies=["comanage:coreapi_client"],
+               skip_ruff=True)
