--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pandas-stubs>=2.0.3
 pydantic>=2.5.2
 pyyaml==6.0
 python_dateutil >= 2.5.3
+types-python-dateutil >= 2.9.0
 pytest>=7.2.0
 requests>=2.18.4
 requests-oauthlib>=2.0.0
