--- a/gear/identifier_provisioning/src/docker/manifest.json
+++ b/gear/identifier_provisioning/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "identifier-provisioning",
     "label": "Identifier Provisioning",
-    "description": "Gear for provisioning NACCIDs from PTENRL forms",
-    "version": "0.1.1",
+    "description": "Gear for provisioning NACCIDs from Enrollment forms",
+    "version": "0.1.2",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/identifier-provisioning:0.1.1"
+            "image": "naccdata/identifier-provisioning:0.1.2"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -27,7 +27,7 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "The CSV input file with data from the PTENRL form",
+            "description": "The CSV input file with data from the Enrollment form",
             "base": "file",
             "type": {
                 "enum": [
@@ -51,7 +51,11 @@
             "description": "The instance specific AWS parameter path prefix for apikey",
             "type": "string",
             "default": "/prod/flywheel/gearbot"
-
+        },
+        "enrollment_module": {
+            "description": "Enrollment form module name",
+            "type": "string",
+            "default": "enrollv1"
         }
     },
     "command": "/bin/run"
