Update ruff settings

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,2 +1,11 @@
+exclude = [
+    "comanage"
+]
+
+line-length = 88
+indent-width = 4
+
+target-version = "py311"
+
 [lint]
 select = ["E", "F", "I"]
