Update mypi settings for comanage

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,9 @@
 [mypy]
 warn_unused_configs = True
+exclude = comanage/coreapi/
+
+[mypy-comanage]
+ignore_missing_imports = True
 
 [mypy-flywheel_gear_toolkit]
 ignore_missing_imports = True
