Add-registry-to-user-mgmt (#94)
* Disable linter on coreapi

* Add user registry class

* Refactor registry methods

* Use comanage classes instead of dict

* Update user-management docs

* Add draft changes to user mgmt

* Update user mgmt run

* Fix user entry loop

* Refactor user directory entry

* Modify user registry classes to support user management

* Add registry calls to user management

* Add email notifications to common

* Add email to user management gear

* Switch from message content to template data model

* Update send email calls

* Add get admin project to nacc group

* Track date in registry

* Factor out common message components

* Factor out methods for case converstion

* Fix typo in method name

* Format code

* Add comanage and notification parameters

* Add registry metadata class

* Add person creation dates to user registry

* Fix spelling in method name

* Remove registry metadata

* Use coperson.meta creation date instead of registry data

* Allow for creation date to be None

* Remove registry metadata

* Add parameters to manifest

* Update email template names

* Refactor registry list method

* Remove pylint pragma

* Add note about filtering user list for admin users

* Factor out add to registry function

* Refactor user management main

* Update dependencies

* Add explicit admin project to nacc group

* Remove unused function

* add from to raise commands

* Update user management doc

* Rebuild lockfiles after pants upgrade

* Fix a comment in center group

* Rename test file

* Simplify directory class and clean up tests

* Remove unused imports

* Edit merged directory

* Format directory code

* Fix formatting

* Skip mypy for comanage

* Make create for active user entry

* Update user management run for changes to directory entries

* Update user mgmt gear main to use changes to directory entries

* Add get method t

--- a/comanage/coreapi/src/python/BUILD
+++ b/comanage/coreapi/src/python/BUILD
@@ -1,3 +1,5 @@
 python_sources(name="coreapi",
                sources=["**/*.py"],
-               dependencies=["comanage:coreapi_client"])
+               dependencies=["comanage:coreapi_client"],
+               skip_mypy=True,
+               skip_ruff=True)
