Upgrade user management image tags

--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "user-management",
     "label": "User Management",
     "description": "Creates and updates user and user roles",
-    "version": "0.0.31",
+    "version": "1.0.1",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/user-management:0.0.31"
+            "image": "naccdata/user-management:1.0.1"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -66,7 +66,7 @@
         "comanage_parameter_path": {
             "description": "Parameter path for CoManage API",
             "type": "string",
-            "default": "/prod/comanage-api"
+            "default": "/prod/comanage/api"
         },
         "sender_path": {
             "description": "Parameter path for sender of email notifications",
