Update notification handling
Update notification handling.
1. Refactor use of notification client to pull creation out of main.
2. Add config flag to force followup claim notifications.

--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -72,6 +72,11 @@
             "description": "Parameter path for sender of email notifications",
             "type": "string",
             "default": "/prod/notifications"
+        },
+        "force_unclaimed_notification": {
+            "description": "Whether to ignore date restrictions on notifications for unclaimed user records",
+            "type": "boolean",
+            "default": false
         }
     },
     "command": "/bin/run"
