--- a/gear/center_management/src/docker/manifest.json
+++ b/gear/center_management/src/docker/manifest.json
@@ -1,13 +1,13 @@
 {
-    "name": "project-management",
-    "label": "Project management",
-    "description": "Creates and updates projects from project YAML file",
+    "name": "center-management",
+    "label": "Center management",
+    "description": "Creates and updates centers from center YAML file",
     "version": "1.0.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
     "license": "MPL-2.0",
-    "url": "https://naccdata.github.io/flywheel-gear-extensions/project_management",
+    "url": "https://naccdata.github.io/flywheel-gear-extensions/center_management",
     "source": "https://github.com/naccdata/flywheel-gear-extensions",
     "environment": {
         "FLYWHEEL": "/flywheel/v0"
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/project-management:1.0.0"
+            "image": "naccdata/center-management:1.0.0"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -26,8 +26,8 @@
         "api-key": {
             "base": "api-key"
         },
-        "project_file": {
-            "description": "The project YAML file",
+        "center_file": {
+            "description": "The center YAML file",
             "base": "file",
             "type": {
                 "enum": [
@@ -48,7 +48,7 @@
             "default": "nacc"
         },
         "new_only": {
-            "description": "Only create projects for centers tagged as new",
+            "description": "Only create centers tagged as new",
             "type": "boolean",
             "default": false
         },
