--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 boto3>=1.28.53
 boto3-stubs[boto3]
 botocore
+python-dotenv>=1.0.0
 flywheel-gear-toolkit>=0.2
 flywheel-sdk>=18.5.0
 fw-client>=0.7.0
