--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pyyaml==6.0
 python_dateutil >= 2.5.3
 types-python-dateutil >= 2.9.0
 pytest>=7.2.0
+pytest-mock >= 3.14.0
 requests>=2.18.4
 requests-oauthlib>=2.0.0
 setuptools>=68.2.2
