add dateutil back as a dependency; used by comanage

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ pydantic>=2.5.2
 pyyaml==6.0
 pytest>=7.2.0
 pytest-mock >= 3.14.0
+python_dateutil >= 2.5.3
+types-python-dateutil >= 2.9.0
 requests>=2.18.4
 requests-oauthlib>=2.0.0
 setuptools>=68.2.2
