Automate REDCap user management (#96)
* Add redcap user management functions

* Adding users to REDCap projects

* Add gerabot user when creating a new REDCap project

* Fixed a bug in updating REDCap metadata in FW

* Refactor REDCapConnection class

* Add REDCapRepository

* Update redcap_project_creation gear to use new classes

* Update redcap_fw_transfer gear to use new classes

* Update user-management gear to use REDCapParametersRepository

* Change REDCappFormProject->REDCapFormProjectMetadata

* Fix spelling error

* Remove unused dateutil dependency

* Format code

* add dateutil back as a dependency; used by comanage

* fix: isinstance takes class name rather than type

* Ignore liskov principle violation

* Refactor for typing issues

* Add type annotation for typing error

* Change form-qc-checker to use new REDCap classes

---------

Co-authored-by: Ben Keller <bjkeller@vt.edu>

--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -77,6 +77,11 @@
             "description": "Whether to ignore date restrictions on notifications for unclaimed user records",
             "type": "boolean",
             "default": false
+        },
+        "redcap_parameter_path": {
+            "description": "Parameter path prefix for REDCap project credentials",
+            "type": "string",
+            "default": "/redcap/aws"
         }
     },
     "command": "/bin/run"
