--- a/gear/user_management/src/docker/manifest.json
+++ b/gear/user_management/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "user-management",
     "label": "User Management",
     "description": "Creates and updates user and user roles",
-    "version": "1.1.9",
+    "version": "1.2.0",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/user-management:1.1.9"
+            "image": "naccdata/user-management:1.2.0"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
@@ -73,7 +73,7 @@
             "type": "string",
             "default": "/prod/notifications"
         },
-        "force_unclaimed_notifications": {
+        "force_notifications": {
             "description": "Whether to ignore date restrictions on notifications for unclaimed user records",
             "type": "boolean",
             "default": false
