--- a/gear/redcap_refresh_dl_urls/src/docker/BUILD
+++ b/gear/redcap_refresh_dl_urls/src/docker/BUILD
@@ -3,4 +3,6 @@ file(name="manifest", source="manifest.json")
 docker_image(name="redcap-refresh-dl-urls",
              source="Dockerfile",
              dependencies=[":manifest", "gear/redcap_refresh_dl_urls/src/python/redcap_refresh_dl_urls_app:bin"],
-             image_tags=["0.0.1", "latest"])
+             image_tags=["0.0.5", "latest"],
+             build_platform=["linux/amd64"]
+             )
