--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
             "version": "latest",
             "enableNonRootDocker": true,
             "moby": true
-        }
+        },
+        "ghcr.io/devcontainers/features/go:1": {}
     },
     "remoteEnv": {
         "PATH": "${containerEnv:PATH}:/home/vscode/bin"
