Revert obtaining req fields from gear config

--- a/gear/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_transformer/src/docker/manifest.json
@@ -36,12 +36,6 @@
             }
         }
     },
-    "config": {
-        "required_fields": {
-            "description": "List of fields needs to be present in the file",
-            "type": "string",
-            "default": "naccid, module, visitnum, visitdate"
-        }
-    },
+    "config": {},
     "command": "/bin/run"
 }
