Format build files

--- a/gear/push_template/src/python/template_app/BUILD
+++ b/gear/push_template/src/python/template_app/BUILD
@@ -1,6 +1,3 @@
 python_sources(name="template_app", )
 
-pex_binary(
-	name="bin",
-	entry_point="run.py"
-)
+pex_binary(name="bin", entry_point="run.py")
