--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,6 @@
 [mypy]
 warn_unused_configs = True
-exclude = comanage/coreapi/
-
-[mypy-comanage]
-ignore_missing_imports = True
+check_untyped_defs = True
 
 [mypy-flywheel_gear_toolkit]
 ignore_missing_imports = True
