Add linter checks for private variables

--- a/ruff.toml
+++ b/ruff.toml
@@ -8,4 +8,4 @@ indent-width = 4
 target-version = "py311"
 
 [lint]
-select = ["A", "B", "E", "W", "F", "I", "RUF", "SIM", "C90", "PLW0406", "COM818"]
+select = ["A", "B", "E", "W", "F", "I", "RUF", "SIM", "C90", "PLW0406", "COM818", "SLF001"]
