Separate out transformations from file upload

--- a/gear/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_transformer/src/docker/manifest.json
@@ -34,6 +34,11 @@
                     "source code"
                 ]
             }
+        },
+        "admin_project": {
+            "description": "Flywheel lookup string for the admin project",
+            "type": "string",
+            "default": "nacc/project-admin"
         }
     },
     "config": {},
