--- a/gear/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_transformer/src/docker/manifest.json
@@ -2,7 +2,7 @@
     "name": "csv-to-json-transformer",
     "label": "CSV to JSON Transformer",
     "description": "Converts rows of CSV file to JSON files",
-    "version": "0.0.7",
+    "version": "0.0.10",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/csv-to-json-transformer:0.0.7"
+            "image": "naccdata/csv-to-json-transformer:0.0.10"
         },
         "flywheel": {
             "suite": "Curation",
@@ -34,6 +34,13 @@
                     "source code"
                 ]
             }
+        }
+    },
+    "config": {
+        "apikey_path_prefix": {
+            "description": "The instance specific AWS parameter path prefix for apikey",
+            "type": "string",
+            "default": "/prod/flywheel/gearbot"
         },
         "admin_project": {
             "description": "Flywheel lookup string for the admin project",
@@ -41,6 +48,5 @@
             "default": "nacc/project-admin"
         }
     },
-    "config": {},
     "command": "/bin/run"
 }
