--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ typing-extensions>=4.8.0 # only needed for python < 3.12
 types-PyYAML>=6.0.12
 urllib3 >= 2.2.1
 nacc_form_validator@ https://github.com/naccdata/nacc-form-validator/releases/download/v0.3.0/nacc_form_validator-0.3.0-py3-none-any.whl
+ratelimit>=2.2.1
