Some name updates

--- a/gear/csv_center_splitter/src/docker/manifest.json
+++ b/gear/csv_center_splitter/src/docker/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "csv_center_splitter",
-    "label": "csv_center_splitter",
+    "name": "csv-center-splitter",
+    "label": "CSV Center Splitter",
     "description": "Splits a CSV by center ID",
     "version": "0.1.0",
     "author": "NACC",
@@ -15,7 +15,7 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/csv_center_splitter:0.1.0"
+            "image": "naccdata/csv-center-splitter:0.1.0"
         },
         "flywheel": {
             "suite": "NACC Admin Gears",
