Write out first draft

--- a/gear/csv_center_splitter/src/docker/manifest.json
+++ b/gear/csv_center_splitter/src/docker/manifest.json
@@ -18,7 +18,7 @@
             "image": "naccdata/csv-center-splitter:0.1.0"
         },
         "flywheel": {
-            "suite": "NACC Admin Gears",
+            "suite": "Curation",
             "show-job": true
         }
     },
@@ -27,7 +27,7 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "The project YAML file",
+            "description": "The input CSV",
             "base": "file",
             "type": {
                 "enum": [
@@ -42,21 +42,18 @@
             "type": "boolean",
             "default": false
         },
-        "admin_group": {
-            "description": "Name of the admin group",
-            "type": "string",
-            "default": "nacc"
+        "adcid_key": {
+            "description": "Colun name from the input CSV with the ADCIDs",
+            "type": "string"
         },
-        "new_only": {
-            "description": "Only create projects for centers tagged as new",
-            "type": "boolean",
-            "default": false
+        "target_project": {
+            "description": "Target project to write the split results to",
+            "type": "string"
         },
-        "apikey_path_prefix": {
-            "description": "The instance specific AWS parameter path prefix for apikey",
+        "delimiter": {
+            "description": "The input file delimiter",
             "type": "string",
-            "default": "/prod/flywheel/gearbot"
-
+            "default": ","
         }
     },
     "command": "/bin/run"
