--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,4 @@ types-PyYAML>=6.0.12
 urllib3 >= 2.2.1
 nacc_form_validator@ https://github.com/naccdata/nacc-form-validator/releases/download/v0.3.0/nacc_form_validator-0.3.0-py3-none-any.whl
 ratelimit>=2.2.1
+ratelimit-types>=0.0.1
