Update csv-to-json-transformer gear (#118)
* Add identifier lookup template

* Edit manifest

* Add transformer gear template files

* Edit manifest

* Add app name to docker file

* Add comment for csv transformer app

* Revise templates to gear scenario

* Update code from templates

* Add identifier lookup gear description to doc

* Add draft description of csv-to-json transformer

* Pull updated lockfile from main

* pull lockfile from main

* Move csv transformer to gear directory

* Fix path for gear

* Move identifier lookup to gear directory

* Move csv transfomer docs

* Move identifier lookup docs

* Add identifier lookup doc link to docs index

* Edit identifier lookup documentation

* Edit identifier lookup doc

* Update dependencies

Update dependencies
1. Add sqlalchemy for access to identifiers database
2. Add pydantic to check parameter dictionaries

* Add initial code for identifiers

* Add RDS parameters to parameter store

* Add outputs package to common

* Add notes to identifier lookup run.py

* Update gear description

* Fixed a typo in gear description

* Remove unused import

* Pull parameter store from identifiers lookup

* Pull dependencies from identifiers lookup

* Create generic method for parameters

* Remove stray shell sources from build

* Add error handling and type ignores

* add test for parameter store

* Fix linter issues

* Add configuration and code to pull RDS credentials from parameter store

* Add repository for identifiers linked to sqlalchemy

* Remove unused code

* Add get_file method to proxy

* Update identifier repository

Update identifier repository
1. Create repository using parameters instead of URL
2. Overload list method to add filtering by adcid

* Add ptid property to identifier

* Add test for list by adcid

* Extend input description

* Add type stubs

* format build file

* Add initial gear methods

* Pull i

--- a/gear/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_transformer/src/docker/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "redcap-project-creation",
-    "label": "REDCap Project Creation",
-    "description": "A gear to create REDCap projects using the REDCap API",
-    "version": "0.0.3",
+    "name": "csv-to-json-transformer",
+    "label": "CSV to JSON Transformer",
+    "description": "Converts rows of CSV file to JSON files",
+    "version": "0.0.11",
     "author": "NACC",
     "maintainer": "NACC <nacchelp@uw.edu>",
     "cite": "",
@@ -15,10 +15,10 @@
     "custom": {
         "gear-builder": {
             "category": "utility",
-            "image": "naccdata/redcap-project-creation:0.0.3"
+            "image": "naccdata/csv-to-json-transformer:0.0.11"
         },
         "flywheel": {
-            "suite": "NACC Admin Gears",
+            "suite": "Curation",
             "show-job": true
         }
     },
@@ -27,14 +27,13 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "YAML file with REDCap project details for the study",
+            "description": "The project-level CSV file with naccid and module",
             "base": "file",
             "type": {
                 "enum": [
                     "source code"
                 ]
-            },
-            "optional": false
+            }
         }
     },
     "config": {
@@ -43,30 +42,10 @@
             "type": "string",
             "default": "/prod/flywheel/gearbot"
         },
-        "super_token_path": {
-            "description": "AWS parameter path for REDCap super api token",
-            "type": "string",
-            "default": "/redcap/aws/super"
-        },
-        "project_token_path": {
-            "description": "AWS parameter path prefix to store REDCap project api token",
-            "type": "string",
-            "default": "/redcap/aws"
-        },
         "admin_project": {
             "description": "Flywheel lookup string for the admin project",
             "type": "string",
             "default": "nacc/project-admin"
-        },
-        "use_xml_template": {
-            "description": "Use XML template to create REDCap projects",
-            "type": "boolean",
-            "default": true
-        },
-        "output_file_prefix": {
-            "description": "Prefix for output file name",
-            "type": "string",
-            "default": "redcap-projects"
         }
     },
     "command": "/bin/run"
