Add transform file as explicit input

--- a/gear/csv_to_json_transformer/src/docker/manifest.json
+++ b/gear/csv_to_json_transformer/src/docker/manifest.json
@@ -27,8 +27,18 @@
             "base": "api-key"
         },
         "input_file": {
-            "description": "The project-level CSV file with naccid and module",
+            "description": "a CSV file with NACCIDs",
             "base": "file",
+            "type": {
+                "enum": [
+                    "tabular data"
+                ]
+            }
+        },
+        "transform_file": {
+            "description": "a JSON file with transform data",
+            "base": "file",
+            "optional": true,
             "type": {
                 "enum": [
                     "source code"
@@ -42,10 +52,10 @@
             "type": "string",
             "default": "/prod/flywheel/gearbot"
         },
-        "admin_project": {
-            "description": "Flywheel lookup string for the admin project",
+        "admin_group": {
+            "description": "Name of the admin group",
             "type": "string",
-            "default": "nacc/project-admin"
+            "default": "nacc"
         }
     },
     "command": "/bin/run"
